--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="1vAxuVyFbsP6_9e1TUUVqf66f-PdYG0nI0QQzSsYmJU" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock-Paper-Scissora Game</title>
     <link rel="stylesheet" href="style.css"/>
